nhkstories/static/nhkstories/style.css
/* general */
* { box-sizing:border-box; }
body { margin:0; font:14px sans-serif;}
a { color:#0d182b; }

/* header */
header {
    background-color:#0d182b;
    display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap;
}
header a { color:white; text-decoration:none; outline:none; }
header h1 { margin:0; font:28px sans-serif; letter-spacing:2px; word-spacing:2px; flex-grow:4; }
/* margin atop <a> (not padding in <h1>) for cross-browser consistency */
header h1 a { display:inline-block; margin:10px 0 10px; padding:0 14px 18px; }
header nav { flex-basis:100px; flex-grow:1; font-size:20px; }
header nav ul { list-style-type:none; margin:0; padding:0; display:flex; justify-content:space-around; }
header nav li { display:inline-block; padding:10px; }
header nav a { color: #ccc; }

/* navigation bars */
main nav { font-size:x-large; }
main nav>table { table-layout:fixed; margin:0 auto; }
main nav td { text-align:center; padding:5px; }
main nav td:nth-child(3) { min-width:4em; }

/* content */
main { max-width:660px; margin:0 auto; padding:0 10px; line-height:1.75; }
main h2 { font-size:28px; color:#24447a; letter-spacing:4px; word-spacing:4px; }
@-moz-document url-prefix() {
    /* Only Mozilla Firefox does proper hyphenation */
    @media (min-width:30em) { main {text-align:justify;hyphens:auto;} }
}

/* stories */
article h3 { font:24px sans-serif; margin:0; color:#24447a; }
article h4 { font-size:large; margin:0 0 10px; }
article h4 a { font-family:mono; }
article .permalink { float:right; font-variant:uppercase; }
article { margin-bottom:100px; font-size:20px; overflow-wrap:break-word; }
article img, audio, video { width:100%; }
article>p { cursor:default; margin-bottom:40px; }

/* rubies */
ruby>rt { visibility:hidden; }
ruby:hover>rt { visibility:inherit; }
.ruby-never ruby:hover>rt { visibility:hidden; }
.ruby-always ruby>rt { visibility:inherit; }
#ruby-toggles {
    list-style-type:none; margin-top:10px; padding:0;
    display:flex; flex-direction:row; justify-content:space-around;
}
#ruby-toggles input { display:none; }
#ruby-toggles img { height:60px; width:60px; padding:5px; border-radius:3px; }
#ruby-toggles :checked + img { padding:4px; border:1px solid black; }
#ruby-toggles :hover + img { padding:4px; border:1px solid #a1b9e8; }

/* asides */
aside section {
    background-color:#f7f9fd;  padding:0 10px;
    border:1px solid #eee; border-radius:3px; box-shadow:0 1px 1px #0d182b;
}
@media (max-width:1279px), (max-height:499px) {
    #rikai-container {
        position:fixed; top:0; width:100%; height:100%;
        display:flex; flex-direction:column; justify-content:space-around; align-items:center;
    }
    #rikai-edict, #rikai-names {
        width:420px; max-width:calc(100% - 40px);
        max-height:calc(100% - 70px); overflow:auto;
    }
    #rikai-mask {
        position:fixed; top:0; left:0; width:100%; height:100%;
        background-color:rgba(0,0,0,.5); z-index:-1;
    }
}
@media (min-width:1280px) {
    aside section { margin:20px 10px 0; }
    aside { position:sticky; top:0px; float:left; width:310px; height:100%; }
    #rikai-container { max-height:calc(100% - 300px); overflow:auto; padding:0; margin:0; }
}

